tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.diagnostic
diagnostic error code=L0001 message="unexpected character '$'" @ tests/cases/compiler-development/artifact/errors/diagnostic-unexpected-character.ari:1:1
